feat: add comment annotation feature with context menu integration and custom dialog